[package]
name = "foxie"
version = "0.1.0"
authors = ["Elijah Potter <sirius.potter522@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.10.2"
tokio = {version = "1.2.0", features = ["full"]}
rand = "0.8.3"
roux = "1.3.2"
meval = "0.2"
simplelog = "0.9.0"
log = "0.4.14"