[package]
name = "foxie"
version = "0.1.0"
authors = ["Elijah Potter <elijah.sirius@protonmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
serenity = "0.10.2"
tokio = {version = "1.2.0", features = ["full"]}
rand = "0.8.3"
roux = "1.3.2"
meval = "0.2"
uwuify = "0.2.1"
dotenv = "0.15.0"
